--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,27 @@
 # Site settings
-title: MY Blog
-SEOTitle: MY的博客 | BY Blog
-header-img: img/post-bg-desk.jpg
+title: 每天都有一点点的进步
+SEOTitle: 王世济 | BY Blog
+header-img: img/post-bg-index.jpg
 email: starkme@126.com
-description: "Every failure is leading towards success."
-keyword: "MY, MY Blog,MY的博客, wcoders1, 邱柏荧, iOS, Apple, iPhone"
+description: "Fear of failure is the greatest obstacle success!"
+keyword: "MY, MY Blog,王世济的博客, wangshiji, 王世济, Java, JavaScript, Apple"
 url: "http://wcoders1.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/wcoders1/wcoders1.github.io.git" # you code repository
 
-# Sidebar settings
+# Sidebar settings    侧边栏
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Hard makes you a better person!"
+sidebar-avatar: /img/post-mylogo.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     wcoders1
-zhihu_username:     wcoders1
+weibo_username:     王世济啊
 github_username:    wcoders1
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+#facebook_username:  baiying.qiu.7
+#jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
 
 
@@ -64,9 +63,9 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  repo: wcoders1.github.io    #仓库名称
+  owner: wcoders1    #github用户名
+  admin: wcoders1
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
@@ -74,17 +73,17 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+ba_track_id: 2340d5f781e3eae4a1be3ac826396655
 
 # Google Analytics
-ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+#ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
+#ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
 
 
-# Featured Tags
+# Featured Tags  标签
 featured-tags: true                     # 是否使用首页标签
 featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
 
@@ -96,15 +95,9 @@ service-worker: true
 
 
 
-# Friends
+# Friends 好友链接
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
         title: "Apple",
         href: "https://apple.com"
     },{
