--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 每天都有一点点的进步
+title: 每天都有所进步
 SEOTitle: 王世济 | BY Blog
 header-img: img/post-bg-index.jpg
 email: starkme@126.com
