--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sidebar-avatar: /img/post-mylogo.jpg      # use absolute URL, seeing it's used i
 
 # SNS settings
 RSS: false
-weibo_username:     王世济啊
+weibo_username:     u/5494602564
 github_username:    wcoders1
 #facebook_username:  baiying.qiu.7
 #jianshu_username:   e71990ada2fd
